// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Img /> renders correctly with default props 1`] = `
<img
  alt="alexander dummer 150646"
  className="img lazyload"
  data-sizes="auto"
  data-src="https://policygenius-images.imgix.net/photos/alexander-dummer-150646.jpg?w=768&h=768&fit=clip&auto=format&auto=compress"
  data-srcset="
  https://policygenius-images.imgix.net/photos/alexander-dummer-150646.jpg?w=1025&h=1025&fit=clip&auto=compress&auto=format&ch=Width,DPR,Save-Data 1026w,
  https://policygenius-images.imgix.net/photos/alexander-dummer-150646.jpg?w=768&h=768&fit=clip&auto=compress&auto=format&ch=Width,DPR,Save-Data 769w,
  https://policygenius-images.imgix.net/photos/alexander-dummer-150646.jpg?w=320&h=320&fit=clip&auto=compress&auto=format&ch=Width,DPR,Save-Data 321w
"
  src={undefined}
  title="alexander dummer 150646"
/>
`;

exports[`<Img /> renders correctly with given imgix picture source props 1`] = `
<picture
  className=""
>
  <source
    media="(max-width: 767px)"
    srcSet="https://policygenius-images.imgix.net/small?w=767&h=768&fit=clip&auto=format&auto=compress"
  />
  <source
    media="(max-width: 1024px)"
    srcSet="https://policygenius-images.imgix.net/medium?w=1024&h=768&fit=clip&auto=format&auto=compress"
  />
  <img
    alt="default"
    className="img lazyload"
    data-sizes="auto"
    data-src="https://policygenius-images.imgix.net/default.jpg?w=768&h=768&fit=clip&auto=format&auto=compress"
    desktopImgixSrc="large"
    src={undefined}
    title="default"
  />
</picture>
`;

exports[`<Img /> renders correctly with given imgix props 1`] = `
<img
  alt="are cool"
  className="img lazyload cool-class"
  data-sizes="auto"
  data-src="https://policygenius-images.imgix.net/photos/are-cool.jpg?w=768&h=768&fit=clip&auto=format&auto=compress"
  data-srcset="
  https://policygenius-images.imgix.net/photos/are-cool.jpg?w=10&h=20&fit=clip&auto=compress&auto=format&ch=Width,DPR,Save-Data 1026w,
  https://policygenius-images.imgix.net/photos/are-cool.jpg?w=10&h=20&fit=clip&auto=compress&auto=format&ch=Width,DPR,Save-Data 769w,
  https://policygenius-images.imgix.net/photos/are-cool.jpg?w=10&h=20&fit=clip&auto=compress&auto=format&ch=Width,DPR,Save-Data 321w
"
  src={undefined}
  title="are cool"
/>
`;

exports[`<Img /> renders correctly with given regular picture source props 1`] = `
<picture
  className=""
>
  <source
    media="(max-width: 767px)"
    srcSet="small"
  />
  <source
    media="(max-width: 1024px)"
    srcSet="medium"
  />
  <img
    alt="Alternative"
    className="img lazyload"
    data-sizes="auto"
    data-src="default.jpg"
    desktopSrc="large"
    src={undefined}
    title="default"
  />
</picture>
`;

exports[`<Img /> renders correctly with given regular props 1`] = `
<img
  alt="alt"
  className="img lazyload cool-class"
  data-sizes="auto"
  data-src="some-url"
  data-srcset="some-url"
  src={undefined}
  title="title"
/>
`;

exports[`<Img /> renders with hide classes when null src props are provided 1`] = `
<picture
  className="hide-mobile-image hide-tablet-image"
>
  <img
    alt="default"
    className="img lazyload"
    data-sizes="auto"
    data-src="https://policygenius-images.imgix.net/default.jpg?w=768&h=768&fit=clip&auto=format&auto=compress"
    src={undefined}
    title="default"
  />
</picture>
`;
